# darwin

./: .cocos-project.json  .gitignore  .gitmodules  CMakeLists.txt  README.md  _config.yml  index.html  package.json  search-index.js  start.py
core/: CMakeLists.txt
core/flatbuffers/: GenerationState.fbs
core/sqlite3/: CMakeLists.txt
core/src/: CoreSession.cpp  Database.cpp  Filesystem.cpp  Session.cpp
docs/: package.json  playbook.yml
extensions/pong/modules/evolution/: CMakeLists.txt  build.py
extensions/pong/modules/evolution/include/tinyai/: tinyann.hpp
extensions/pong/modules/evolution/src/: gdlibrary.cpp
extensions/pong/modules/neat/: CMakeLists.txt  build.py
extensions/pong/modules/neat/include/tinyai/: tinyneat.hpp
extensions/pong/modules/neat/src/: gdlibrary.cpp
modules/persistent-models/: Cargo.toml
modules/persistent-models/src/: lib.rs  persistent_models.rs
opennn/: CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  cmake_install.cmake
pong-progress/: book.toml
portal/: .gitignore  composer.json  package-lock.json  package.json  webpack.mix.js
src/core/: CMakeLists.txt  readme.md
src/core/include/core/core/: Config.h  EvolutionSession.h  Session.h
src/core/include/core/helpers/: random.h
src/core/include/public/core/: Debug.h  Session.h
src/core/include/public/helpers/: random.h
src/core/src/: Config.cpp  Session.cpp
src/extensions/flappers/: .gitignore  CMakeLists.txt  export_presets.cfg  project.godot
src/extensions/flappers/include/flappers/: Base.h  Flapper.h  MainScene.h  Session.h
src/extensions/flappers/include/flappers/flappers/: Flapper.h  Roof.h  Session.h
src/extensions/flappers/include/public/flappers/: AppDelegate.h  Constants.h  Flapper.h  Listeners.h  MainScene.h  Pipe.h  Session.h
src/extensions/flappers/lib/cocos2d/cocos/: CMakeLists.txt
src/extensions/flappers/lib/cocos2d/cocos/base/: CCUserDefault-android.cpp  CCUserDefault-apple.mm
src/extensions/flappers/lib/cocos2d/cocos/editor-support/cocostudio/: CCDataReaderHelper.cpp  CCDataReaderHelper.h
src/extensions/flappers/lib/cocos2d/cocos/editor-support/cocostudio/WidgetReader/: WidgetReader.h
src/extensions/flappers/lib/cocos2d/cocos/editor-support/cocostudio/WidgetReader/ArmatureNodeReader/: ArmatureNodeReader.h
src/extensions/flappers/lib/cocos2d/cocos/editor-support/cocostudio/WidgetReader/CheckBoxReader/: CheckBoxReader.cpp
src/extensions/flappers/lib/cocos2d/cocos/editor-support/cocostudio/WidgetReader/ComAudioReader/: ComAudioReader.h
src/extensions/flappers/lib/cocos2d/cocos/editor-support/cocostudio/WidgetReader/GameMapReader/: GameMapReader.cpp  GameMapReader.h
src/extensions/flappers/lib/cocos2d/cocos/editor-support/cocostudio/WidgetReader/GameNode3DReader/: GameNode3DReader.cpp
src/extensions/flappers/lib/cocos2d/cocos/editor-support/cocostudio/WidgetReader/ImageViewReader/: ImageViewReader.cpp  ImageViewReader.h
src/extensions/flappers/lib/cocos2d/cocos/editor-support/cocostudio/WidgetReader/Light3DReader/: Light3DReader.cpp  Light3DReader.h
src/extensions/flappers/lib/cocos2d/cocos/editor-support/cocostudio/WidgetReader/ListViewReader/: ListViewReader.cpp  ListViewReader.h
src/extensions/flappers/lib/cocos2d/cocos/editor-support/cocostudio/WidgetReader/LoadingBarReader/: LoadingBarReader.h
src/extensions/flappers/lib/cocos2d/cocos/editor-support/cocostudio/WidgetReader/Node3DReader/: Node3DReader.h
src/extensions/flappers/lib/cocos2d/cocos/editor-support/cocostudio/WidgetReader/NodeReader/: NodeReader.cpp  NodeReader.h
src/extensions/flappers/lib/cocos2d/cocos/editor-support/cocostudio/WidgetReader/PageViewReader/: PageViewReader.h
src/extensions/flappers/lib/cocos2d/cocos/editor-support/cocostudio/WidgetReader/Particle3DReader/: Particle3DReader.h
src/extensions/flappers/lib/cocos2d/cocos/editor-support/cocostudio/WidgetReader/ScrollViewReader/: ScrollViewReader.cpp
src/extensions/flappers/lib/cocos2d/cocos/editor-support/cocostudio/WidgetReader/SingleNodeReader/: SingleNodeReader.h
src/extensions/flappers/lib/cocos2d/cocos/editor-support/cocostudio/WidgetReader/SkeletonReader/: BoneNodeReader.h
src/extensions/flappers/lib/cocos2d/cocos/editor-support/cocostudio/WidgetReader/SliderReader/: SliderReader.cpp  SliderReader.h
src/extensions/flappers/lib/cocos2d/cocos/editor-support/cocostudio/WidgetReader/TabControlReader/: TabControlReader.cpp  TabControlReader.h
src/extensions/flappers/lib/cocos2d/cocos/editor-support/cocostudio/WidgetReader/TextBMFontReader/: TextBMFontReader.cpp
src/extensions/flappers/lib/cocos2d/cocos/editor-support/cocostudio/WidgetReader/TextFieldReader/: TextFieldReader.cpp
src/extensions/flappers/lib/cocos2d/cocos/editor-support/cocostudio/WidgetReader/TextReader/: TextReader.cpp
src/extensions/flappers/lib/cocos2d/cocos/editor-support/cocostudio/WidgetReader/UserCameraReader/: UserCameraReader.h
src/extensions/flappers/lib/cocos2d/cocos/platform/: CCFileUtils.cpp
src/extensions/flappers/proj.android/app/res/values/: strings.xml
src/extensions/flappers/proj.ios_mac/ios/: Info.plist
src/extensions/flappers/proj.ios_mac/mac/: main.cpp
src/extensions/flappers/proj.linux/: main.cpp
src/extensions/flappers/proj.win32/: main.cpp
src/extensions/flappers/resources/: sprite-sheet.plist
src/extensions/flappers/scenes/: Ground.tscn  Main.tscn  Pipe.tscn  Player.tscn  Wall.tscn
src/extensions/flappers/scripts/: Parallax.gd  Pipe.gd  Player.gd
src/extensions/flappers/sprites/: bird.png.import  pipe.jpg.import  pipe.png.import
src/extensions/flappers/src/: AppDelegate.cpp  Base.cpp  Flapper.cpp  Listeners.cpp  MainScene.cpp  Pipe.cpp  Roof.cpp  Session.cpp
src/persistent-models/: .gitignore  CMakeLists.txt
src/persistent-models/c-headers/: persistent_models.h
src/persistent-models/include/: main.h
src/persistent-models/include/persistent-models/persistent-models/: persistent-models.h
src/persistent-models/src/: helpers.rs  main.cpp
src/persistent-models/test/: CMakeLists.txt  main.cpp
src/persistent-models/test/data/: definition1.json
(+455 files in other folders)
