[package]
name = 'persistent_models'
version = '0.1.0'
authors = ['nahiyan <nahiyan.alamgir0@gmail.com>']
edition = '2018'

[dependencies]
serde_json = '1.0'

[dependencies.serde]
version = '1.0'
features = ['derive']

[dev-dependencies]
speculate = '0.1'

[lib]
name = 'persistent_models'
crate-type = ['cdylib']
